# goit-web-hw-module-3

./: copy_files.py  copy_files_by_threads.py  factorize_by_multiprocessing.py  main.py  pyproject.toml
